force-app/main/default/objects/Member_Benefit_Program__c/Member_Benefit_Program__c.object-meta.xml
<CustomObject>
    <label>Member Benefit Program</label>
    <nameField>
        <label>Member Benefit Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Member Benefit Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>