force-app/main/default/objects/Member_Benefit_Program__c/fields/Activation_Validity_Days__c.field-meta.xml
<CustomField>
    <fullName>Activation_Validity_Days__c</fullName>
    <defaultValue>45</defaultValue>
    <label>Activation Validity Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>