force-app/main/default/objects/Member_Benefit_Program__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>Valid_To__c &gt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>