force-app/main/default/objects/Member_Benefit_Program__c/fields/Blackhawk_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Blackhawk_Catalog__c</fullName>
    <label>Blackhawk Catalog</label>
    <length>200</length>
    <type>Text</type>
</CustomField>