force-app/main/default/objects/Member_Benefit_Program__c/fields/Blackhawk_Catalog_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Blackhawk_Catalog_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blackhawk Catalog</label>
    <referenceTo>Blackhawk_Card_Product__c</referenceTo>
    <relationshipLabel>Member Benefit Programs</relationshipLabel>
    <relationshipName>Member_Benefit_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>