force-app/main/default/objects/Member_Benefit_Program__c/fields/Eligible_Products__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eligible Products</label>
    <referenceTo>Eligible_Products__c</referenceTo>
    <relationshipLabel>Member Benefit Programs</relationshipLabel>
    <relationshipName>Member_Benefit_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>