force-app/main/default/objects/Member_Benefit_Program__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>Purchase End Date</label>
    <type>Date</type>
</CustomField>