force-app/main/default/objects/Member_Benefit_Program__c/fields/Gift_Card_Validity_Days__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Validity_Days__c</fullName>
    <defaultValue>183</defaultValue>
    <label>Gift Card Validity Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>