force-app/main/default/objects/Member_Benefit_Program__c/fields/Gift_Card_Value__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Value__c</fullName>
    <label>Gift Card Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>