force-app/main/default/objects/Member_Benefit_Program__c/fields/Maximum_Gift_Card_Per_Customer__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Gift_Card_Per_Customer__c</fullName>
    <label>Maximum Gift Card Per Customer</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>