force-app/main/default/objects/Member_Benefit_Program__c/fields/Product_Hierarchies__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierarchies__c</fullName>
    <label>Product Hierarchies</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>