force-app/main/default/objects/Member_Benefit_Program__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Purchase Start Date</label>
    <type>Date</type>
</CustomField>