force-app/main/default/objects/Member_Benefit_Program__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <label>Registration Start Date</label>
    <type>Date</type>
</CustomField>