force-app/main/default/objects/Member_Benefit_Program__c/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <label>Registration End Date</label>
    <type>Date</type>
</CustomField>