force-app/main/default/objects/Member_Benefit_Program__c/listViews/All2.listView-meta.xml
<ListView>
    <fullName>All2</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Eligible_Products__c</columns>
    <columns>Product_Hierarchies__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>